added hockey club section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <li><a>Contact</a></li>
               </ul>
             </div>
-            <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold">Hockey<span class="text-[#FF4240]">’</span>s</a>
+            <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold p-0">Hockey<span class="text-[#FF4240] mx-[-8px] lg:mx-[-9px] p-0">’</span>s</a>
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1 text-lg">
@@ -42,7 +42,7 @@
             </ul>
           </div>
           <div class="navbar-end">
-            <button class="btn btn-ghost btn-circle">
+            <button class="btn btn-ghost btn-circle hidden lg:block">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
             </button>
             <button class="btn bg-[#FF4240]">
@@ -82,12 +82,42 @@
           </div>
         </div>
       </div>
+      <!-- overflow meet section -->
       <div class="bg-black text-white mt-2 p-4 lg:p-8 rounded-lg w-full lg:w-1/2 lg:right-20 lg:bottom-8 lg:absolute">
-        <h3 class="font-extrabold text-lg lg:text-2xl pb-2">Meet aLL teams & go second round</h3>
+        <h3 class="font-extrabold text-lg lg:text-2xl pb-2">Meet all teams & go second round</h3>
         <p class="font-semibold text-sm lg:text-base">Trophy awarded to the winner of the world's professional hockey championship, an annual play-off that culminates the season of the National Hockey League.</p>
       </div>        
     </header>
     <main>
+      <section class="mb-4 lg:mb-8">
+        <div class="text-center mt-6 lg:mt-10 mx-4 lg:mx-32 mb-4 lg:mb-8">
+          <h3 class="font-extrabold text-xl lg:text-4xl mb-2">Professional Hockeys Club</h3>
+          <p class="font-medium text-sm lg:text-base">Our mission is to provide all members and associates of the Club with pathways and opportunities to fulfil their individual and collective goals in hockey.</p>
+        </div>
+        <div class="lg:flex lg:space-x-4 space-y-6">
+        <div class="text-center space-y-2 flex-1">
+          <div class="radial-progress text-error" style="--value:87;" role="progressbar">87%</div>
+          <h4 class="font-semibold text-xl">Prayer Facility</h4>
+          <p>Our hockey club is an inclusive and friendly place.</p>
+        </div>          
+        <div class="text-center space-y-2 flex-1">
+          <div class="radial-progress text-accent" style="--value:95;" role="progressbar">95%</div>
+          <h4 class="font-semibold text-xl">Experienced Coach</h4>
+          <p>Coaching for all abilities, ages and genders.</p>
+          
+        </div>          
+        <div class="text-center space-y-2 flex-1">
+          <div class="radial-progress text-warning" style="--value:90;" role="progressbar">90%</div>
+          <h4 class="font-semibold text-xl">Senior Player</h4>
+          <p>Adept at counseling younger players on sportsmanship.</p>
+        </div>          
+        <div class="text-center space-y-2 flex-1">
+          <div class="radial-progress text-success" style="--value:80;" role="progressbar">80%</div>
+          <h4 class="font-semibold text-xl">Training Ground</h4>
+          <p>High quality training and develop confidence</p>
+        </div> 
+      </div>         
+      </section>
 
     </main>
     <footer>
