programs section added

--- a/index.html
+++ b/index.html
@@ -89,12 +89,13 @@
       </div>        
     </header>
     <main>
+      <!-- Professional hockey club section -->
       <section class="mb-4 lg:mb-8">
         <div class="text-center mt-6 lg:mt-10 mx-4 lg:mx-32 mb-4 lg:mb-8">
           <h3 class="font-extrabold text-xl lg:text-4xl mb-2">Professional Hockeys Club</h3>
           <p class="font-medium text-sm lg:text-base">Our mission is to provide all members and associates of the Club with pathways and opportunities to fulfil their individual and collective goals in hockey.</p>
         </div>
-        <div class="lg:flex lg:space-x-4 space-y-6">
+        <div class="lg:flex lg:items-center lg:space-x-4 space-y-6">
         <div class="text-center space-y-2 flex-1">
           <div class="radial-progress text-error" style="--value:87;" role="progressbar">87%</div>
           <h4 class="font-semibold text-xl">Prayer Facility</h4>
@@ -117,6 +118,50 @@
           <p>High quality training and develop confidence</p>
         </div> 
       </div>         
+      </section>
+      <!-- Program section -->      
+      <section class="my-6 lg:my-14">
+        <div class="text-center mt-4 lg:mt-10 mx-4 lg:mx-32 mb-4 lg:mb-8">
+          <h3 class="font-extrabold text-2xl lg:text-4xl mb-2">Program Sections</h3>
+          <p class="font-medium text-sm lg:text-base">To develop a planned program of leadership in all areas related to the development of Hockey. The aim is to provide playing opportunities for all within the local community.</p>
+        </div>
+        <div class="space-y-4">
+          <div class="lg:flex lg:gap-4 space-y-4 lg:space-y-0">
+            <div class="relative w-full h-60 lg:h-full">
+              <img src="Images/2.png" alt="Placeholder Image" class="w-full h-full lg:h-80">
+              <div class="absolute top-6 lg:top-1/3 left-0 ps-4 space-y-3 lg:space-y-6">
+                <div class="text-white space-y-2 w-10/12 lg:w-[400px]">
+                  <h2 class="text-xl lg:text-3xl font-extrabold">Junior Program</h2>
+                  <p class="font-medium">To be the leading club in the area for junior development, nurturing the talent and ambition of the individual to reach their full potential.</p>
+                </div>
+                <button class="bg-[#FF4240] px-4 lg:px-6 py-2 lg:py-3 rounded-md text-white text-base lg:text-xl font-bold">Register Now</button>
+              </div>
+          </div>
+          <div class="relative w-full h-60 lg:h-full">
+            <img src="Images/3.png" alt="Placeholder Image" class="w-full h-full lg:h-80">
+            <div class="absolute top-6 lg:top-1/3 left-0 ps-4 space-y-3 lg:space-y-6">
+              <div class="text-white space-y-2 w-10/12 lg:w-[400px]">
+                <h2 class="text-xl lg:text-3xl font-extrabold">Teenager Program</h2>
+                <p class="font-medium">The club aims to provide a co-ordinated coaching and playing structure for youth players which will help our junior members realise and develop their potential.</p>
+              </div>
+              <button class="bg-[#FF4240] px-4 lg:px-6 py-2 lg:py-3 rounded-md text-white text-base lg:text-xl font-bold">Register Now</button>
+            </div>
+        </div>
+          </div>
+          <div>
+            <div class="relative w-full h-60 lg:h-full">
+              <img src="Images/4.jpg" alt="Placeholder Image" class="w-full h-full lg:h-[430px] rounded-2xl">
+              <div class="absolute top-6 lg:top-1/2 left-0 ps-4 space-y-3 lg:space-y-6">
+                <div class="text-white space-y-2 w-10/12 lg:w-[500px]">
+                  <h2 class="text-xl lg:text-3xl font-extrabold">Professional Program</h2>
+                  <p class="font-medium">The mission of the Club reflects the goals of different groups of players and associates, brought together as a whole club with a family and community focus.</p>
+                </div>
+                <button class="bg-[#FF4240] px-4 lg:px-6 py-2 lg:py-3 rounded-md text-white text-base lg:text-xl font-bold">Register Now</button>
+              </div>
+          </div>
+          </div>
+        </div>
+
       </section>
 
     </main>
