--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/55dd461d3d.js" crossorigin="anonymous"></script>
   </head>
   <body class="w-11/12 mx-auto">
     <header>
@@ -34,7 +35,7 @@
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1 text-lg">
-              <li><a>Home</a></li>              
+              <li><a class="text-[#FF4240]">Home</a></li>              
               <li><a>About</a></li>
               <li><a>Pages</a></li>
               <li><a>Blog</a></li>
@@ -161,7 +162,123 @@
           </div>
           </div>
         </div>
-
+      </section>
+      <!-- new product section -->
+      <section>
+        <div class="text-center mt-4 lg:mt-10 mx-4 lg:mx-32 mb-8">
+          <h3 class="font-extrabold text-2xl lg:text-4xl mb-2">Our New Products</h3>
+          <p class="font-medium text-sm lg:text-base">High performing products like carbon fiber hockey sticks, triangular hockey pucks and injury detecting athletic helmets can definitely improve a player's game.</p>
+        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-2 space-y-3 lg:space-y-0">
+          <div class="card lg:card-side bg-base-100 shadow-xl">
+            <figure><img src="Images/5.png" alt="Album"/></figure>
+            <div class="card-body">
+              <div class="flex justify-center items-center font-medium text-sm">
+                <p><span class="pe-1"><i class="fa-solid fa-star text-orange-500"></i></span>5.0</p>
+                <p><span class="pe-1"><i class="fa-solid fa-eye"></i></span>20</p>
+                <p><span class="pe-1"><i class="fa-regular fa-heart"></i></span>200</p>                
+              </div>
+              <h2 class="card-title font-extrabold text-lg">World Cup Flags Football</h2>
+              <p class="font-medium text-sm">Special events need special celebrations.</p>
+              <div class="card-actions flex flex-col lg:flex-row  justify-between text-sm">
+                <p class="font-medium text-[#FF4240]">Price-$22.00</p>
+                <div>
+                  <p class="font-medium"><span class="pe-1"><i class="fa-solid fa-cart-shopping text-neutral-500"></i></span>Delivery Fee:Free</p>                  
+                </div>                
+              </div>
+            </div>
+          </div>
+          <div class="card lg:card-side bg-base-100 shadow-xl">
+            <figure><img src="Images/6.png" alt="Album"/></figure>
+            <div class="card-body">
+              <div class="flex justify-center items-center font-medium text-sm">
+                <p><span class="pe-1"><i class="fa-solid fa-star text-orange-500"></i></span>5.0</p>
+                <p><span class="pe-1"><i class="fa-solid fa-eye"></i></span>20</p>
+                <p><span class="pe-1"><i class="fa-regular fa-heart"></i></span>200</p>                
+              </div>
+              <h2 class="card-title font-extrabold text-lg">World Cup Flags Football</h2>
+              <p class="font-medium text-sm">Special events need special celebrations.</p>
+              <div class="card-actions flex flex-col lg:flex-row justify-between text-sm">
+                <p class="font-medium text-[#FF4240]">Price-$22.00</p>
+                <div>
+                  <p class="font-medium"><span class="pe-1"><i class="fa-solid fa-cart-shopping text-neutral-500"></i></span>Delivery Fee:Free</p>                  
+                </div>                
+              </div>
+            </div>
+          </div>          
+          <div class="card lg:card-side bg-base-100 shadow-xl">
+            <figure><img src="Images/7.png" alt="Album"/></figure>
+            <div class="card-body">
+              <div class="flex justify-center items-center font-medium text-sm">
+                <p><span class="pe-1"><i class="fa-solid fa-star text-orange-500"></i></span>5.0</p>
+                <p><span class="pe-1"><i class="fa-solid fa-eye"></i></span>20</p>
+                <p><span class="pe-1"><i class="fa-regular fa-heart"></i></span>200</p>                
+              </div>
+              <h2 class="card-title font-extrabold text-lg">Cap For Hockeys</h2>
+              <p class="font-medium text-sm">Special events need special celebrations.</p>
+              <div class="card-actions flex flex-col lg:flex-row justify-between text-sm">
+                <p class="font-medium text-[#FF4240]">Price-$22.00</p>
+                <div>
+                  <p class="font-medium"><span class="pe-1"><i class="fa-solid fa-cart-shopping text-neutral-500"></i></span>Delivery Fee:Free</p>                  
+                </div>                
+              </div>
+            </div>
+          </div>
+          <div class="card lg:card-side bg-base-100 shadow-xl">
+            <figure><img src="Images/8.png" alt="Album"/></figure>
+            <div class="card-body">
+              <div class="flex justify-center items-center font-medium text-sm">
+                <p><span class="pe-1"><i class="fa-solid fa-star text-orange-500"></i></span>5.0</p>
+                <p><span class="pe-1"><i class="fa-solid fa-eye"></i></span>20</p>
+                <p><span class="pe-1"><i class="fa-regular fa-heart"></i></span>200</p>                
+              </div>
+              <h2 class="card-title font-extrabold text-lg">World Cup Flags Football</h2>
+              <p class="font-medium text-sm">Special events need special celebrations.</p>
+              <div class="card-actions flex flex-col lg:flex-row justify-between text-sm">
+                <p class="font-medium text-[#FF4240]">Price-$22.00</p>
+                <div>
+                  <p class="font-medium"><span class="pe-1"><i class="fa-solid fa-cart-shopping text-neutral-500"></i></span>Delivery Fee:Free</p>                  
+                </div>                
+              </div>
+            </div>
+          </div>          
+          <div class="card lg:card-side bg-base-100 shadow-xl">
+            <figure><img src="Images/9.png" alt="Album"/></figure>
+            <div class="card-body">
+              <div class="flex justify-center items-center font-medium text-sm">
+                <p><span class="pe-1"><i class="fa-solid fa-star text-orange-500"></i></span>5.0</p>
+                <p><span class="pe-1"><i class="fa-solid fa-eye"></i></span>20</p>
+                <p><span class="pe-1"><i class="fa-regular fa-heart"></i></span>200</p>                
+              </div>
+              <h2 class="card-title font-extrabold text-lg">World Cup Flags Football</h2>
+              <p class="font-medium text-sm">Special events need special celebrations.</p>
+              <div class="card-actions flex flex-col lg:flex-row justify-between text-sm">
+                <p class="font-medium text-[#FF4240]">Price-$22.00</p>
+                <div>
+                  <p class="font-medium"><span class="pe-1"><i class="fa-solid fa-cart-shopping text-neutral-500"></i></span>Delivery Fee:Free</p>                  
+                </div>                
+              </div>
+            </div>
+          </div>
+          <div class="card lg:card-side bg-base-100 shadow-xl">
+            <figure><img src="Images/10.png" alt="Album"/></figure>
+            <div class="card-body">
+              <div class="flex justify-center items-center font-medium text-sm">
+                <p><span class="pe-1"><i class="fa-solid fa-star text-orange-500"></i></span>5.0</p>
+                <p><span class="pe-1"><i class="fa-solid fa-eye"></i></span>20</p>
+                <p><span class="pe-1"><i class="fa-regular fa-heart"></i></span>200</p>                
+              </div>
+              <h2 class="card-title font-extrabold text-lg">World Cup Flags Football</h2>
+              <p class="font-medium text-sm">Special events need special celebrations.</p>
+              <div class="card-actions flex flex-col lg:flex-row justify-between text-sm">
+                <p class="font-medium text-[#FF4240]">Price-$22.00</p>
+                <div>
+                  <p class="font-medium"><span class="pe-1"><i class="fa-solid fa-cart-shopping text-neutral-500"></i></span>Delivery Fee:Free</p>                  
+                </div>                
+              </div>
+            </div>
+          </div>          
+        </div>
       </section>
 
     </main>
