added footer section

--- a/index.html
+++ b/index.html
@@ -318,7 +318,9 @@
             improve a player's game.
           </p>
         </div>
-        <div class="grid grid-cols-1 lg:grid-cols-2 space-x-0 lg:space-x-1 space-y-3 lg:space-y-0">
+        <div
+          class="grid grid-cols-1 lg:grid-cols-2 space-x-0 lg:space-x-1 space-y-3 lg:space-y-0"
+        >
           <div class="card lg:card-side bg-base-100 shadow-xl">
             <figure><img src="Images/5.png" alt="Album" /></figure>
             <div class="card-body">
@@ -569,24 +571,24 @@
           <div class="p-12 shadow-cyan-500">
             <div class="space-y-24">
               <div class="space-y-4">
-                <img src="Images/phone.png" alt="">
+                <img src="Images/phone.png" alt="" />
                 <div>
                   <p class="opacity-50 mt-2">Phone number:</p>
-                <p>(+880) 1773680681</p>
+                  <p>(+880) 1773680681</p>
                 </div>
               </div>
               <div class="space-y-4">
-                <img src="Images/message.png" alt="">
+                <img src="Images/message.png" alt="" />
                 <div>
                   <p class="opacity-50">Email:</p>
-                <p>hockeys@support.com</p>
+                  <p>hockeys@support.com</p>
                 </div>
               </div>
               <div class="space-y-4">
-                <img src="Images/location.png" alt="">
+                <img src="Images/location.png" alt="" />
                 <div>
                   <p class="opacity-50">Location:</p>
-                <p>Sonadanga, Khulna City Corporation</p>
+                  <p>Sonadanga, Khulna City Corporation</p>
                 </div>
               </div>
             </div>
@@ -594,31 +596,67 @@
           <div>
             <form>
               <div class="grid grid-cols-2">
-              <label for="name"><span class="font-bold text-xl">Your Name</span>
-              <input class="block py-5 ps-5 pr-8 my-4" type="text" name="name" id="" placeholder="Enter your full name">
-            </label>
-              <label for="email"><span class="font-bold text-xl">Your Email</span>
-              <input class="block py-5 ps-5 pr-8 my-4" type="email" name="email" id="" placeholder="Enter your email">
-            </label>
-              <label for="subject"><span class="font-bold text-xl">Subject</span>
-              <input class="block py-5 ps-5 pr-8 my-4" type="text" name="subject" id="" placeholder="Enter your subject">
-            </label>
-              <label for="number"><span class="font-bold text-xl">Phone Number</span>
-              <input class="block py-5 ps-5 pr-8 my-4" type="number" name="number" id="" placeholder="Enter your phone number">
-            </label>
-          </div>
-              <label for="name"><span class="font-bold text-xl">Message</span>
-              <textarea class="block my-4 ps-4 pt-4" name="" id="" cols="56" rows="10" placeholder="Write your message"></textarea>
-            </label>
+                <label for="name"
+                  ><span class="font-bold text-xl">Your Name</span>
+                  <input
+                    class="block py-5 ps-5 pr-8 my-4"
+                    type="text"
+                    name="name"
+                    id=""
+                    placeholder="Enter your full name"
+                  />
+                </label>
+                <label for="email"
+                  ><span class="font-bold text-xl">Your Email</span>
+                  <input
+                    class="block py-5 ps-5 pr-8 my-4"
+                    type="email"
+                    name="email"
+                    id=""
+                    placeholder="Enter your email"
+                  />
+                </label>
+                <label for="subject"
+                  ><span class="font-bold text-xl">Subject</span>
+                  <input
+                    class="block py-5 ps-5 pr-8 my-4"
+                    type="text"
+                    name="subject"
+                    id=""
+                    placeholder="Enter your subject"
+                  />
+                </label>
+                <label for="number"
+                  ><span class="font-bold text-xl">Phone Number</span>
+                  <input
+                    class="block py-5 ps-5 pr-8 my-4"
+                    type="number"
+                    name="number"
+                    id=""
+                    placeholder="Enter your phone number"
+                  />
+                </label>
+              </div>
+              <label for="name"
+                ><span class="font-bold text-xl">Message</span>
+                <textarea
+                  class="block my-4 ps-4 pt-4"
+                  name=""
+                  id=""
+                  cols="56"
+                  rows="10"
+                  placeholder="Write your message"
+                ></textarea>
+              </label>
             </form>
             <button
-                  class="w-full bg-[#FF4240] px-4 lg:px-6 py-2 lg:py-3 rounded-md text-white text-base lg:text-xl font-bold"
-                >
-                  Send Message
-                </button>
+              class="w-full bg-[#FF4240] px-4 lg:px-6 py-2 lg:py-3 rounded-md text-white text-base lg:text-xl font-bold"
+            >
+              Send Message
+            </button>
           </div>
         </div>
-        
+
         <div class="text-center my-8">
           <h3 class="font-bold text-xl my-4">Social Media</h3>
           <div class="flex gap-6 justify-center items-center">
@@ -628,9 +666,58 @@
             <i class="fa-brands fa-github"></i>
           </div>
         </div>
-
       </section>
-    </main>    
-      
+    </main>
+    <!-- footer -->
+    <footer
+      class="grid grid-cols-1 lg:grid-cols-5 p-8 lg:p-12 space-y-8 lg:space-y-0 bg-[#131318] text-[#FFFFFF99] text-base-content"
+    >
+      <aside class="col-span-2 pr-8 text-center lg:text-start space-y-2">
+        <h3 class="text-2xl font-extrabold">Get In Touch</h3>
+        <p>
+          Effective and easiest approaches to get in touch with people
+          professionally without wasting extra time.
+        </p>
+        <p>
+          <i class="fa-regular fa-envelope text-red-500 pe-2"></i
+          ><span>hockeys@support.com</span>
+        </p>
+        <p>
+          <i class="fa-solid fa-phone text-red-500 pe-2"></i
+          ><span>(+880) 1773680681</span>
+        </p>
+      </aside>
+      <div class="flex col-span-2 justify-between">
+        <nav class="flex-1 text-center lg:text-left space-y-4">
+          <h6 class="font-bold text-xl">Company</h6>
+          <div class="space-y-2">
+            <a class="link link-hover block">About us</a>
+            <a class="link link-hover block">Leadership</a>
+            <a class="link link-hover block">Careers</a>
+            <a class="link link-hover block">News & Articles</a>
+            <a class="link link-hover block">Legal Notice</a>
+          </div>
+        </nav>
+        <nav class="flex-1 text-center lg:text-left space-y-4">
+          <h6 class="font-bold text-xl">Support</h6>
+          <div class="space-y-2">
+            <a class="link link-hover block">Help Center</a>
+            <a class="link link-hover block">FAQ</a>
+            <a class="link link-hover block">Ticket Support</a>
+            <a class="link link-hover block">Contact Us</a>
+          </div>
+        </nav>
+      </div>
+      <nav
+        class="flex flex-col justify-center text-center lg:text-left space-y-4"
+      >
+        <h6 class="font-bold text-xl">Services</h6>
+        <a class="link link-hover">Academy</a>
+        <a class="link link-hover">Group Lesson</a>
+        <a class="link link-hover">Private Lesson</a>
+        <a class="link link-hover">Hockeys for kids</a>
+        <a class="link link-hover">Hockeys for adult</a>
+      </nav>
+    </footer>
   </body>
 </html>
