extra question section added

--- a/index.html
+++ b/index.html
@@ -555,21 +555,92 @@
           </div>
         </div>
       </section>
-      <!-- Get in Touch section -->
+      <!-- client question section -->
       <section>
         <div class="text-center mt-4 lg:mt-10 mx-4 lg:mx-32 mb-4 lg:mb-8">
           <h3 class="font-extrabold text-2xl lg:text-4xl mb-2">
-            Program Sections
+            Clients Question
           </h3>
           <p class="font-medium text-sm lg:text-base">
-            To develop a planned program of leadership in all areas related to
-            the development of Hockey. The aim is to provide playing
-            opportunities for all within the local community.
+            Hockey players love to argue. Fling their hands in the air and ask why. It's such a fast paced games and it's hard to know what happened 20 ft ...
           </p>
         </div>
-        <div class="flex justify-center items-center">
-          <div class="p-12 shadow-cyan-500">
-            <div class="space-y-24">
+        <div class="hero min-h-full bg-base-200">
+          <div class="hero-content max-w-72 lg:max-w-full flex-col lg:flex-row">
+            <img src="Images/11.png" class="max-w-full lg:max-w-sm rounded-lg shadow-2xl" />
+            <div class="ps-4">
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                <div class="collapse-title text-xl font-bold">
+                  Our Equipment
+                </div>
+                <div class="collapse-content"> 
+                  <p>The necessary gear includes a stick, skates, helmet with a face mask or visor, gloves, elbow pads, shoulder pads, and shin guards.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                <div class="collapse-title text-xl font-bold">
+                  Hockey Training
+                </div>
+                <div class="collapse-content"> 
+                  <p>Hockey training goals to practice and improve power shooting skills & shot accuracy.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                <div class="collapse-title text-xl font-bold">
+                  Private Lessons
+                </div>
+                <div class="collapse-content"> 
+                  <p>Private and semi-private lessons are available to players of all ages and ability levels at the Winterhawks Skating Center.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                <div class="collapse-title text-xl font-bold">
+                  Ski Touring
+                </div>
+                <div class="collapse-content"> 
+                  <p>Be it alpine skiing, telemarking, ski touring, snowshoeing, ice climbing, cross country skiing, snowboarding, ice skating or ice hockey.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                <div class="collapse-title text-xl font-bold">
+                  Booking
+                </div>
+                <div class="collapse-content"> 
+                  <p>Hockey Goals is a motivational and inspirational book about loving the sport of hockey. It's great for budding little hockey players of any gender.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                <div class="collapse-title text-xl font-bold">
+                  Pricings
+                </div>
+                <div class="collapse-content"> 
+                  <p>We provide our range at most reliable prices of the industry. Features: Best quality; Strong; Excellent functionality; Affordable.</p>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Get in Touch section -->
+      <section class="my-4">
+        <div class="text-center mt-4 lg:mt-10 mx-4 lg:mx-32 mb-4 lg:mb-8">
+          <h3 class="font-extrabold text-2xl lg:text-4xl mb-2">
+            Get In Touch
+          </h3>
+          <p class="font-medium text-sm lg:text-base">
+            A get-in-touch form helps you hear from your customers in an easier and more effective way. By embedding a contact us form into your website.
+          </p>
+        </div>
+        <div class="flex flex-col lg:flex-row  lg:justify-center items-center space-y-4">
+          <div class="p-8 lg:p-12 shadow-cyan-500">
+            <div class="space-y-12 lg:space-y-24">
               <div class="space-y-4">
                 <img src="Images/phone.png" alt="" />
                 <div>
@@ -595,11 +666,11 @@
           </div>
           <div>
             <form>
-              <div class="grid grid-cols-2">
+              <div class="grid grid-cols-1 lg:grid-cols-2">
                 <label for="name"
                   ><span class="font-bold text-xl">Your Name</span>
                   <input
-                    class="block py-5 ps-5 pr-8 my-4"
+                    class="block py-4 lg:py-5 ps-2 lg:ps-5 pr-2 lg:pr-8 my-4"
                     type="text"
                     name="name"
                     id=""
@@ -609,7 +680,7 @@
                 <label for="email"
                   ><span class="font-bold text-xl">Your Email</span>
                   <input
-                    class="block py-5 ps-5 pr-8 my-4"
+                    class="block py-4 lg:py-5 ps-2 lg:ps-5 pr-2 lg:pr-8 my-4"
                     type="email"
                     name="email"
                     id=""
@@ -619,7 +690,7 @@
                 <label for="subject"
                   ><span class="font-bold text-xl">Subject</span>
                   <input
-                    class="block py-5 ps-5 pr-8 my-4"
+                    class="block py-4 lg:py-5 ps-2 lg:ps-5 pr-2 lg:pr-8 my-4"
                     type="text"
                     name="subject"
                     id=""
@@ -629,7 +700,7 @@
                 <label for="number"
                   ><span class="font-bold text-xl">Phone Number</span>
                   <input
-                    class="block py-5 ps-5 pr-8 my-4"
+                    class="block py-4 lg:py-5 ps-2 lg:ps-5 pr-2 lg:pr-8 my-4"
                     type="number"
                     name="number"
                     id=""
@@ -640,17 +711,17 @@
               <label for="name"
                 ><span class="font-bold text-xl">Message</span>
                 <textarea
-                  class="block my-4 ps-4 pt-4"
+                  class="block py-4 lg:py-5 ps-2 lg:ps-5 pr-2 lg:pr-8 my-4"
                   name=""
                   id=""
-                  cols="56"
-                  rows="10"
+                  cols="22"
+                  rows="6"
                   placeholder="Write your message"
                 ></textarea>
               </label>
             </form>
             <button
-              class="w-full bg-[#FF4240] px-4 lg:px-6 py-2 lg:py-3 rounded-md text-white text-base lg:text-xl font-bold"
+              class="w-full bg-[#FF4240] px-2 lg:px-6 py-2 lg:py-3 rounded-md text-white text-base lg:text-xl font-bold"
             >
               Send Message
             </button>
