--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 World Cup Flags Football
               </h2>
               <p class="font-medium text-sm">
-                Special events need special celebrations.
+                The Flags Football in different angles.
               </p>
               <div
                 class="card-actions flex flex-col lg:flex-row justify-between text-sm"
@@ -418,7 +418,7 @@
               </div>
               <h2 class="card-title font-extrabold text-lg">Cap For Hockeys</h2>
               <p class="font-medium text-sm">
-                Special events need special celebrations.
+                Worlds Largest Selection of Hockey Caps.
               </p>
               <div
                 class="card-actions flex flex-col lg:flex-row justify-between text-sm"
@@ -496,7 +496,7 @@
                 World Cup Flags Football
               </h2>
               <p class="font-medium text-sm">
-                Special events need special celebrations.
+                Worlds Largest Selection of Hockey Caps.
               </p>
               <div
                 class="card-actions flex flex-col lg:flex-row justify-between text-sm"
@@ -639,7 +639,7 @@
           </p>
         </div>
         <div class="flex flex-col lg:flex-row  lg:justify-center items-center space-y-4">
-          <div class="p-8 lg:p-12 shadow-cyan-500">
+          <div class="mr-2 p-8 lg:p-12 rounded-lg shadow-2xl bg-slate-200">
             <div class="space-y-12 lg:space-y-24">
               <div class="space-y-4">
                 <img src="Images/phone.png" alt="" />
@@ -664,7 +664,7 @@
               </div>
             </div>
           </div>
-          <div>
+          <div class="ms-2">
             <form>
               <div class="grid grid-cols-1 lg:grid-cols-2">
                 <label for="name"
@@ -728,7 +728,7 @@
           </div>
         </div>
 
-        <div class="text-center my-8">
+        <div class="text-center w-full bg-slate-300 my-8 rounded-md shadow-xl border-r-4 opacity-70 p-1">
           <h3 class="font-bold text-xl my-4">Social Media</h3>
           <div class="flex gap-6 justify-center items-center">
             <i class="fa-brands fa-twitter"></i>
